--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,9 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.Cup.classpath}:\
+    ${libs.Lexer.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
